--- a/index.html
+++ b/index.html
@@ -3,20 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>The Diagnosis Machine</title>
+    <link href="./css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="symptoms.html">Symptoms</a></li>
-            <li><a href="about.html">About Us</a></li>
-        </ul>
-    </nav>
-</header>
+<table id="navbar">
 
+    <tr>
 
+        <!--Left-Aligned Elements-->
+        <td id="navbar-left-element">
+            <b id = "header-title-tile">The Diagnosis Machine</b>
+        </td>
+
+        <!--Center Elements-->
+        <td id="navbar-center-element">
+            <a href="index.html">Home</a>
+            <a href="symptoms.html">Symptoms</a>
+            <a href="about.html">About Us</a>
+        </td>
+
+        <!--Right-Aligned Elements-->
+        <td id="navbar-right-element">
+            <b id="navbar-username">Username</b>
+            <b id="navbar-signout">Sign Out</b>
+        </td>
+
+    </tr>
+
+</table>
 
 
 </body>
