--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Diagnosis Machine</title>
+    <title>Welcome - The Diagnosis Machine</title>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css">
     <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
 </head>
@@ -11,7 +11,7 @@
 
 <div id="background"> <!-- Shitty workaround - CSS3 can't apply alpha to a bg image, so I have to desaturate using a div above the bg>
 
-<!-- This is the Navbar. Turns out using a Table make sit really clean and simple, and avoids a lot of alignment pain vs. using flow.-->
+<!-- This is the Navbar. Turns out using a Table makes it really clean and simple, and avoids a lot of alignment pain vs. using flow.-->
 <table id="navbar">
 
     <tr>
