--- a/symptoms.html
+++ b/symptoms.html
@@ -47,7 +47,7 @@
 
          <table id="symptom-grid">
 
-            <tr>
+             <tr>
                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
                     <div><b class="heading-medium">Symptom</b></div>
                 </td>
@@ -62,6 +62,10 @@
 
                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
                     <div><b class="heading-medium">Symptom</b></div>
+                </td>
+
+                <td id="proceed-button" rowspan="3">
+                    <img src="./images/next-caret.png">
                 </td>
             </tr>
 
@@ -103,6 +107,10 @@
 
         </table>
 
+    </div>
+
+    <div id="footer">
+        &copy; - Copyright 2017 - DataluxE Web Productions
     </div>
 
 </div> <!-- end background div-->
