Added HTML/CSS for mock-in of 'Results' page'.

--- a/results.html
+++ b/results.html
@@ -2,9 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Results - The Diagnosis Machine</title>
+    <link href="./css/normalize.css" rel="stylesheet" type="text/css">
+    <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
+
+<div id="background"> <!-- Shitty workaround - CSS3 can't apply alpha to a bg image, so I have to desaturate using a div above the bg>
+
+    <!--Navbar-->
+    <table id="navbar">
+
+        <tr>
+
+            <!--Left-Aligned Elements-->
+            <td id="navbar-left-element">
+                <a href="index.html">Home</a>
+                <a href="symptoms.html">Symptoms</a>
+                <a href="about.html">About Us</a>
+            </td>
+
+            <!--Center Elements-->
+            <td id="navbar-center-element">
+                <b id = "header-title-tile">The Diagnosis Machine</b>
+            </td>
+
+            <!--Right-Aligned Elements-->
+            <td id="navbar-right-element">
+                <b id="navbar-username">Username</b>
+                <b id="navbar-signout">Sign Out</b>
+            </td>
+
+        </tr>
+
+    </table>
+    <!-- Navbar End-->
+
+    <div id="supplement-container">
+
+        <div class="supplement-panel">
+
+            <p class="heading-big">Food Research Calcium Complex</p>
+
+            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+
+            <p class="flavor-text-medium-small">
+                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
+            </p>
+
+            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+
+            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+
+        </div>
+
+        <div class="supplement-panel">
+
+            <p class="heading-big">Food Research Calcium Complex</p>
+
+            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+
+            <p class="flavor-text-medium-small">
+                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
+            </p>
+
+            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+
+            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+
+        </div>
+
+        <div class="supplement-panel">
+
+            <p class="heading-big">Food Research Calcium Complex</p>
+
+            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+
+            <p class="flavor-text-medium-small">
+                Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
+            </p>
+
+            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+
+            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+
+        </div>
+
+    </div>
+
+    <div id="footer">
+        &copy; - Copyright 2017 - DataluxE Web Production
+    </div>
+
+</div> <!-- end background div-->
 
 </body>
 </html>
