--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
         </div>
 
         <div id="footer">
-            &copy; - Copyright 2017 - DataluxE Web Productions
+            &copy; - Copyright 2017 - DataluxE Web Production
         </div>
 
     </div>
