--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
     <div id="footer">
-        &copy; - Copyright 2017 - DataluxE Web Productions
+        &copy; - Copyright 2017 - DataluxE Web Production
     </div>
 
 </div> <!-- end background div-->
