--- a/symptoms.html
+++ b/symptoms.html
@@ -110,7 +110,7 @@
     </div>
 
     <div id="footer">
-        &copy; - Copyright 2017 - DataluxE Web Productions
+        &copy; - Copyright 2017 - DataluxE Web Production
     </div>
 
 </div> <!-- end background div-->
