Improved Result page CSS, added detailed notes to 'Design Rough' in preparation for installation of Javascript.

--- a/results.html
+++ b/results.html
@@ -43,49 +43,49 @@
 
         <div class="supplement-panel">
 
-            <p class="heading-big">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
 
-            <p class="flavor-text-medium-small">
+            <p class="flavor-text-medium-small supp-desc">
                 Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
             </p>
 
-            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
 
-            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
 
         </div>
 
         <div class="supplement-panel">
 
-            <p class="heading-big">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
 
-            <p class="flavor-text-medium-small">
+            <p class="flavor-text-medium-small supp-desc">
                 Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
             </p>
 
-            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
 
-            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
 
         </div>
 
         <div class="supplement-panel">
 
-            <p class="heading-big">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supplement-image">
+            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
 
-            <p class="flavor-text-medium-small">
+            <p class="flavor-text-medium-small supp-desc">
                 Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
             </p>
 
-            <b class="heading-medium">$22.98 60ct |  $58.98 240ct</b>
+            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
 
-            <a class="heading-medium" href="https://www.buyfoodresearch.com/products/calcium-complex">External Link  &#x1f517;</a>
+            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
 
         </div>
 
