Added HTML, CSS, Image for Result Page's "Restart" button.

--- a/results.html
+++ b/results.html
@@ -5,6 +5,7 @@
     <title>Results - The Diagnosis Machine</title>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css">
     <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
+    <link href="./js/index.js" rel="script" type="text/plain">
 </head>
 
 <body>
@@ -86,6 +87,12 @@
             <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
 
             <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
+
+        </div>
+
+        <div id="restart-button">
+
+            <img id="restart-img" src="images/restart-loop.png">
 
         </div>
 
