Added all JS (first draft) for index.html, added sample bulk-definitions to massDefinitions.js.
Small changes to Design Rough.txt, added script tag, minor changes to index.html.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Welcome - The Diagnosis Machine</title>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css">
     <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
+    <script src="./js/index.js"></script>
 </head>
 
 <body>
@@ -56,13 +57,15 @@
             <tr>
                 <td class="sign-in-cell">
                     <b>Username</b>
-                    <input title="username" type="text" id="username-field"><br>
+                    <input id="username-field" title="username" type="text">
+                    <br><br>
                     <b>Existing Users</b>
                     <button id="sign-in-button">Sign In</button>
                 </td>
                 <td class="sign-in-cell">
                     <b>Password</b>
-                    <input title="password" type="text" id="password-field"><br>
+                    <input id="password-field" title="password" type="text">
+                    <br><br>
                     <b>New Users</b>
                     <button id="sign-up-button">Sign Up</button>
                 </td>
