Added pictured for all symptoms, paths therefor to massDefinitions added all processing in symptoms.js, minor edits in html, css to work with javacsript, changed function expressions to function declarations in index.js, symptoms.js.

--- a/symptoms.html
+++ b/symptoms.html
@@ -5,6 +5,8 @@
     <title>Symptoms - The Diagnosis Machine</title>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css">
     <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
+    <script src="./js/massDefinitions.js"></script>
+    <script src="./js/symptoms.js"></script>
 </head>
 
 <body>
@@ -48,20 +50,20 @@
          <table id="symptom-grid">
 
              <tr>
-                <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                    <div><b class="heading-medium">Symptom</b></div>
+                <td style="background: url('./images/symptoms/energy.png') no-repeat" class="symptom-cell">
+                    <div><b class="heading-medium">Energy</b></div>
                 </td>
 
-                <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                    <div><b class="heading-medium">Symptom</b></div>
+                <td style="background: url('./images/symptoms/digestion.png') no-repeat" class="symptom-cell">
+                    <div><b class="heading-medium">Digestion</b></div>
                 </td>
 
-                <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                    <div><b class="heading-medium">Symptom</b></div>
+                <td style="background: url('./images/symptoms/mood.png') no-repeat" class="symptom-cell">
+                    <div><b class="heading-medium">Mood</b></div>
                 </td>
 
-                <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                    <div><b class="heading-medium">Symptom</b></div>
+                <td style="background: url('./images/symptoms/headaches.png') no-repeat" class="symptom-cell">
+                    <div><b class="heading-medium">Headaches</b></div>
                 </td>
 
                 <td id="proceed-button" rowspan="3">
@@ -70,38 +72,38 @@
             </tr>
 
              <tr>
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/foggybrain.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Foggy Brain</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/boneproblems.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Bone Problems</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/allergies.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Allergies</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/sugarcravings.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Sugar Cravings</b></div>
                  </td>
              </tr>
 
              <tr>
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/hearttrouble.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Heart Trouble</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/recurringcolds.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Recurring Colds</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/romantichealth.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">Romantic Health</b></div>
                  </td>
 
-                 <td style="background: url('./images/symptom-test.png') no-repeat" class="symptom-cell">
-                     <div><b class="heading-medium">Symptom</b></div>
+                 <td style="background: url('./images/symptoms/generalnutrition.png') no-repeat" class="symptom-cell">
+                     <div><b class="heading-medium">General Nutrition</b></div>
                  </td>
              </tr>
 
