Added results.js, hardened symptoms.js, trivial chagnes to index.js, fixed dictionary errors in massDefinitions, added / updated pictures.
First complete full draft.

--- a/results.html
+++ b/results.html
@@ -5,7 +5,7 @@
     <title>Results - The Diagnosis Machine</title>
     <link href="./css/normalize.css" rel="stylesheet" type="text/css">
     <link href="./css/combinedCss.css" rel="stylesheet" type="text/css">
-    <link href="./js/index.js" rel="script" type="text/plain">
+    <script src="./js/results.js"></script>
 </head>
 
 <body>
@@ -44,17 +44,17 @@
 
         <div class="supplement-panel">
 
-            <p class="heading-big supp-heading">Food Research Calcium Complex</p>
+            <p class="heading-big supp-heading">Food Research Calcium Complex</p> <!--inner text Dynamic-->
 
-            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image">
+            <img src="./images/supplements/calciumcomplex.jpg" class="supp-image"><!--image url Dynamic-->
 
-            <p class="flavor-text-medium-small supp-desc">
+            <p class="flavor-text-medium-small supp-desc"> <!--Inner text Dynamic-->
                 Calcium Complex is a 100% vegetarian Food supplement that is intended to supply 100% Food calcium. Research has shown in groups of people who consume 300 mgs of Food calcium per day or less from plant sources that they have low incidences of osteoporosis. 100% Food Calcium Complex is a plant source of calcium. It does not contain calcium mineral salts such as calcium carbonate, calcium citrate, or calcium lactate. Studies have shown that FOOD calcium is up to 8.79 times better absorbed and better retained than typical USP rock mineral salts.
             </p>
 
-            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p>
+            <p class="heading-medium supp-info">$22.98 60ct |  $58.98 240ct</p> <!--Price Dynamic-->
 
-            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a></p>
+            <p class="heading-medium supp-info"><a href="https://www.buyfoodresearch.com/products/calcium-complex">External Link...</a><!--a's href Dynamic--></p>
 
         </div>
 
